--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ Django==3.1.1
 gunicorn==20.0.4
 Pillow==7.2.0
 psycopg2==2.8.6
+python-http-client==3.3.1
 pytz==2020.1
+sendgrid==6.4.7
 sqlparse==0.3.1
+starkbank-ecdsa==1.1.0
 whitenoise==5.2.0
