--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 asgiref==3.2.10
+astroid==2.4.2
 coverage==5.3
 dj-database-url==0.5.0
 Django==3.1.1
 django-nose==1.4.7
 gunicorn==20.0.4
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 nose==1.3.7
 Pillow==7.2.0
 psycopg2==2.8.6
+pylint==2.6.0
 python-http-client==3.3.1
 pytz==2020.1
 sendgrid==6.4.7
+six==1.15.0
 sqlparse==0.3.1
 starkbank-ecdsa==1.1.0
+toml==0.10.1
 whitenoise==5.2.0
+wrapt==1.12.1
